--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Install openBLAS
+        run: sudo apt-get install -y libopenblas-dev
       - name: Build
         run: cargo build --release
       - name: Run tests
