--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -13,8 +13,9 @@ jobs:
         with:
           python-version: 3.9
       - name: Build Wheels
-        uses: messense/maturin-action@main
+        uses: messense/maturin-action@v1
         with:
+          maturin-version: latest
           manylinux: auto
           command: build
           args: --release --out dist --no-sdist --cargo-extra-args="--features python openblas-static"
