--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,9 +12,11 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
+      - name: install numpy
+
       - name: Build Wheels
         uses: messense/maturin-action@v1
-        with:
+        run: pip install numpy
           maturin-version: latest
           manylinux: auto
           command: build
