--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -16,6 +16,8 @@ jobs:
         run: pip install numpy
       - name: Build Wheels
         uses: messense/maturin-action@v1
+        with:
+          maturin-version: latest
           manylinux: auto
           command: build
           args: --release --out dist --no-sdist --cargo-extra-args="--features python openblas-static"
