--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,19 +12,55 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: install numpy
-        run: pip install numpy
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
       - name: Build Wheels
         uses: messense/maturin-action@v1
         with:
           maturin-version: latest
           manylinux: auto
           command: build
+          args: --release --out dist --no-sdist --cargo-extra-args="--features python --features openblas-static"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
+  macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+          architecture: x64
+      - name: Build wheels - x86_64
+        uses: messense/maturin-action@main
+        with:
+          target: x86_64
+          args: --release --out dist --no-sdist --cargo-extra-args="--features python --features openblas-static"
+      - name: Build wheels - universal2
+        uses: messense/maturin-action@main
+        with:
+          args: --release --universal2 --out dist --no-sdist --cargo-extra-args="--features python"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
+  windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        target: [x64, x86]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+          architecture: ${{ matrix.target }}
+      - name: Build wheels
+        uses: messense/maturin-action@main
+        with:
+          target: ${{ matrix.target }}
           args: --release --out dist --no-sdist --cargo-extra-args="--features python --features openblas-static"
       - name: Upload wheels
         uses: actions/upload-artifact@v2
