add installation for openblas under windows

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -24,28 +24,6 @@ jobs:
         with:
           name: dist
           path: dist
-  macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-          architecture: x64
-      - name: Build wheels - x86_64
-        uses: messense/maturin-action@main
-        with:
-          target: x86_64
-          args: --release --out dist --no-sdist --cargo-extra-args="--features python --features openblas-static"
-      - name: Build wheels - universal2
-        uses: messense/maturin-action@main
-        with:
-          args: --release --universal2 --out dist --no-sdist --cargo-extra-args="--features python"
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist
-          path: dist
   windows:
     runs-on: windows-latest
     strategy:
@@ -57,6 +35,8 @@ jobs:
         with:
           python-version: 3.9
           architecture: ${{ matrix.target }}
+      - name: Install OpenBLAS
+        run: vcpkg install openblas --triplet x64-windows-static-md
       - name: Build wheels
         uses: messense/maturin-action@main
         with:
