--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -18,7 +18,7 @@ jobs:
           maturin-version: latest
           manylinux: auto
           command: build
-          args: --release --out dist --no-sdist --cargo-extra-args="--features python --features openblas-static"
+          args: --release --out dist --no-sdist -m build_wheel/Cargo.toml
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
