--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,16 @@
 name = "feos-core"
 version = "0.1.0"
 authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
-           "Philipp Rehner <rehner@itt.uni-stuttgart.de"]
+           "Philipp Rehner <prehner@ethz.ch"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+description = "Core traits and functionalities for the `feos` project."
+homepage = "https://github.com/feos-org"
+readme = "README.md"
+repository = "https://github.com/feos-org/feos-core"
+keywords = ["physics", "thermodynamics", "equations_of_state", "phase_equilibria"]
+categories = ["science"]
+exclude = ["/.github/*", "*.ipynb", "/docs"]
 
 [dependencies]
 quantity = { version = "0.3", features = ["linalg"] }
@@ -14,7 +22,6 @@ ndarray-linalg = "0.14"
 ndarray-stats = "0.5"
 num-traits = "0.2"
 thiserror = "1.0"
-anyhow = "1.0"
 argmin = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
