--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ categories = ["science"]
 exclude = ["/.github/*", "*.ipynb", "/docs"]
 
 [dependencies]
-quantity = { path = "../../quantity" }
+quantity = "0.4"
 approx = "0.4"
-num-dual = { path = "../../num-dual", features = ["ndarray"] }
+num-dual = { version = "0.4", features = ["ndarray"] }
 ndarray = { version = "0.15", features = ["serde"] }
 num-traits = "0.2"
 thiserror = "1.0"
@@ -24,8 +24,8 @@ argmin = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 indexmap = "1.7"
-numpy = { version = "0.14", optional = true }
-pyo3 = { version = "0.14", optional = true }
+numpy = { version = "0.15", optional = true }
+pyo3 = { version = "0.15", optional = true }
 
 [features]
 default = []
