--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ argmin = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 indexmap = "1.7"
+either = "1.6"
 numpy = { version = "0.15", optional = true }
 pyo3 = { version = "0.15", optional = true }
 
