--- a/build_wheel/Cargo.toml
+++ b/build_wheel/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "feos_core"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
-           "Philipp Rehner <rehner@itt.uni-stuttgart.de"]
+           "Philipp Rehner <prehner@ethz.ch"]
 edition = "2018"
 
 [lib]
