--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feos-core"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
            "Philipp Rehner <prehner@ethz.ch"]
 edition = "2018"
@@ -27,6 +27,7 @@ argmin = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 indexmap = "1.7"
+either = "1.6"
 numpy = { version = "0.15", optional = true }
 pyo3 = { version = "0.15", optional = true }
 
