--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ exclude = ["/.github/*", "*.ipynb", "/docs"]
 rustdoc-args = [ "--html-in-header", "./docs-header.html" ]
 
 [dependencies]
-quantity = "0.4"
+quantity = "0.5"
 approx = "0.4"
-num-dual = { version = "0.4", features = ["ndarray"] }
+num-dual = { version = "0.5", features = ["linalg"] }
 ndarray = { version = "0.15", features = ["serde"] }
 num-traits = "0.2"
 thiserror = "1.0"
@@ -27,8 +27,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 indexmap = "1.7"
 either = "1.6"
-numpy = { version = "0.15", optional = true }
-pyo3 = { version = "0.15", optional = true }
+numpy = { version = "0.16", optional = true }
+pyo3 = { version = "0.16", optional = true }
 
 [features]
 default = []
